0x07-python-test_driven_development/tests/0-add_integer.txt
>>> add_integer = __import__('0-add_integer').add_integer
>>> add_integer(1, 2)
3
>>> add_integer(1)
99
>>> add_integer(None, 1)
Traceback (most recent call last):
TypeError: a must be an integer
>>> add_integer(24.0, 23.99)
47
>>> add_integer(24.0, [2])
Traceback (most recent call last):
TypeError: b must be an integer
>>> add_integer(-2, -1)
-3
>>> type(add_integer(-2, -1))
<class 'int'>
>>> add_integer(-2, 2.5)
0
>>> add_integer(5.2, 2)
7
>>> add_integer()
Traceback (most recent call last):
TypeError: add_integer() missing 1 required positional argument: 'a'
>>> add_integer(a)
Traceback (most recent call last):
NameError: name 'a' is not defined
>>> add_integer(99999999999999999, 99999999999999999)
199999999999999998
>>> add_integer(999999e999999, 1)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/ahmedhamed/alx-higher_level_programming/0x07-python-test_driven_development/0-add_integer.py", line 7, in add_integer
    a = int(a)
        ^^^^^^
OverflowError: cannot convert float infinity to integer
>>> add_integer(999999999999, 1e99999)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/ahmedhamed/alx-higher_level_programming/0x07-python-test_driven_development/0-add_integer.py", line 9, in add_integer
    b = int(b)
        ^^^^^^
OverflowError: cannot convert float infinity to integer

